--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,15 @@
+SERVER_PORT=8080
+SERVER_MODE=debug
+
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
-DB_PASSWORD=mon_mot_de_passe_local
-DB_NAME=b2b_agent_platform
+DB_PASSWORD=postgres
+DB_NAME=agentxmap
 DB_SSLMODE=disable
+
+LOGGER_LEVEL=info
+LOGGER_ENCODING=console
+
+INITIAL_ADMIN_EMAIL=admin@example.com
+INITIAL_ADMIN_PASSWORD=change_me_securely
